[package]
name = "lotsa"
version = "0.1.5"
authors = ["Josh Baker <joshbaker77@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tidwall/lotsa.rs"
documentation = "https://docs.rs/lotsa/"
description = "Execute lots of operations spread over any number of threads."

[dependencies]
